# pyworkbench

./: .gitignore  .pre-commit-config.yaml  AUTHORS  CHANGELOG.md  CNAME  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  README.rst  index.html  pyproject.toml  robots.txt  setup.py  sitemap.xml  tox.ini  user_guide.md  versions.json  zizmor.yml
.github/: CODEOWNERS  dependabot.yml  labeler.yml
.github/workflows/: ci.yml  label.yml
doc/: Makefile  make.bat
doc/changelog.d/: 105.fixed.md  106.dependencies.md  107.dependencies.md  109.dependencies.md  110.dependencies.md  112.dependencies.md  113.miscellaneous.md  115.dependencies.md  118.miscellaneous.md  119.miscellaneous.md  120.dependencies.md  121.changed.md  122.dependencies.md  123.dependencies.md  124.dependencies.md  125.dependencies.md  126.dependencies.md  128.dependencies.md  129.dependencies.md  130.dependencies.md  134.dependencies.md  135.miscellaneous.md  136.fixed.md  137.dependencies.md  138.dependencies.md  139.miscellaneous.md  140.dependencies.md  141.dependencies.md  142.dependencies.md  143.documentation.md  144.dependencies.md  145.documentation.md  146.dependencies.md  148.dependencies.md  149.dependencies.md  150.dependencies.md  151.dependencies.md  152.dependencies.md  154.dependencies.md  155.dependencies.md  (+193 more)
doc/source/: artifacts.rst  changelog.rst  conf.py  contribute.rst  contribute_examples.md  examples.rst  getting-started.rst  index.md  index.rst  installation.md  links.rst  start_server.md  user-guide.rst  user_guide.md
doc/source/_autoapi_templates/: index.rst  launcher.rst  workbench.rst
doc/source/cheatsheet/: cheatsheet.qmd  cheatsheet.tex
doc/source/contribute/: developer.rst  documentarian.rst  user.rst
doc/source/getting-started/: connection.rst  installing.rst
doc/source/getting-started/installing/: development.rst  linux.rst  windows.rst
example/: demo.ipynb  load_geometry.wbjn
src/ansys/workbench/core/: .workbench_client.py.swp  __init__.py  cyberchannel.py  example_data.py  launch_workbench.py  public_api.py  public_apis.py  (+2 more)
tests/: test_example_data.py  test_launch_workbench.py  test_metadata.py  test_workbench_client.py  test_workbench_launcher.py  test_workbenchclient.py
tests/scripts/: cooled_turbine_blade.py
version/: index.html
version/0.10/: artifacts.html  changelog.html  examples.html  genindex.html  getting-started.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
version/0.10/_sources/: artifacts.rst.txt  changelog.rst.txt
version/0.10/_static/: search.json
version/0.10/api/: index.html
version/0.10/getting-started/: connection.html  installing.html
version/0.11/: genindex.html  index.html  search.html
version/0.11/_static/: search.json
version/0.11/getting-started/: installing.html
version/0.2/: .buildinfo  announcement.html  contribute_examples.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js  start_server.html  user_guide.html
version/0.2/api/: index.html
version/0.3/: .buildinfo  contribute_examples.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js  start_server.html  user_guide.html
version/0.3/_sources/: index.md.txt  user_guide.md.txt
version/0.3/api/: index.html
version/0.4/: .buildinfo  changelog.html  examples.html  genindex.html  getting-started.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  user-guide.html
version/0.4/_sources/: getting-started.rst.txt  user-guide.rst.txt
version/0.4/api/: announcement.html  index.html
version/0.4/getting-started/: connection.html  installing.html
version/0.5/: .buildinfo  changelog.html  examples.html  genindex.html  getting-started.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  user-guide.html
version/0.5/_sources/: examples.rst.txt  user-guide.rst.txt
version/0.5/api/: index.html
version/0.5/getting-started/: connection.html  installing.html
version/0.6/: .buildinfo  changelog.html  examples.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  user-guide.html
version/0.6/_sources/: getting-started.rst.txt  user-guide.rst.txt
version/0.6/api/: index.html
version/0.6/getting-started/: connection.html  installing.html
version/0.7/: changelog.html  examples.html  genindex.html  getting-started.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  user-guide.html
version/0.7/_sources/: changelog.rst.txt  index.rst.txt  user-guide.rst.txt
version/0.7/_static/: search.json
version/0.7/api/: index.html
version/0.7/getting-started/: connection.html  installing.html
version/0.8/: artifacts.html  changelog.html  examples.html  genindex.html  getting-started.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  user-guide.html
version/0.8/_static/: search.json
version/0.8/api/: index.html
version/0.8/getting-started/: connection.html  installing.html
version/0.9/: changelog.html  examples.html  genindex.html  getting-started.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  user-guide.html
version/0.9/_sources/: changelog.rst.txt  user-guide.rst.txt
version/0.9/_static/: search.json
version/0.9/api/: index.html
version/0.9/getting-started/: connection.html
version/dev/: .buildinfo  artifacts.html  changelog.html  examples.html  genindex.html  getting-started.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  user-guide.html
version/dev/_sources/: changelog.rst.txt  user-guide.rst.txt
version/dev/_static/: search.json
version/dev/api/: index.html
version/dev/getting-started/: connection.html  installing.html
version/stable/: artifacts.html  changelog.html  examples.html  genindex.html  getting-started.html  index.html  objects.inv  py-modindex.html  searchindex.js  user-guide.html
version/stable/api/: index.html
version/stable/getting-started/: connection.html  installing.html
(+138 files in other folders)
